@@ -222,6 +222,14 @@ name|ContainsPrefixTreeFilter
 extends|extends
 name|AbstractPrefixTreeFilter
 block|{
+comment|/*   Future optimizations:     Instead of seekExact, use seekCeil with some leap-frogging, like Intersects does.   */
+comment|/**    * If the spatial data for a document is comprised of multiple overlapping or adjacent parts,    * it might fail to match a query shape when doing the CONTAINS predicate when the sum of    * those shapes contain the query shape but none do individually.  Set this to false to    * increase performance if you don't care about that circumstance (such as if your indexed    * data doesn't even have such conditions).  See LUCENE-5062.    */
+DECL|field|multiOverlappingIndexedShapes
+specifier|protected
+specifier|final
+name|boolean
+name|multiOverlappingIndexedShapes
+decl_stmt|;
 DECL|method|ContainsPrefixTreeFilter
 specifier|public
 name|ContainsPrefixTreeFilter
@@ -237,6 +245,9 @@ name|grid
 parameter_list|,
 name|int
 name|detailLevel
+parameter_list|,
+name|boolean
+name|multiOverlappingIndexedShapes
 parameter_list|)
 block|{
 name|super
@@ -250,6 +261,72 @@ argument_list|,
 name|detailLevel
 argument_list|)
 expr_stmt|;
+name|this
+operator|.
+name|multiOverlappingIndexedShapes
+operator|=
+name|multiOverlappingIndexedShapes
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|equals
+specifier|public
+name|boolean
+name|equals
+parameter_list|(
+name|Object
+name|o
+parameter_list|)
+block|{
+if|if
+condition|(
+operator|!
+name|super
+operator|.
+name|equals
+argument_list|(
+name|o
+argument_list|)
+condition|)
+return|return
+literal|false
+return|;
+return|return
+name|multiOverlappingIndexedShapes
+operator|==
+operator|(
+operator|(
+name|ContainsPrefixTreeFilter
+operator|)
+name|o
+operator|)
+operator|.
+name|multiOverlappingIndexedShapes
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|hashCode
+specifier|public
+name|int
+name|hashCode
+parameter_list|()
+block|{
+return|return
+name|super
+operator|.
+name|hashCode
+argument_list|()
+operator|+
+operator|(
+name|multiOverlappingIndexedShapes
+condition|?
+literal|1
+else|:
+literal|0
+operator|)
+return|;
 block|}
 annotation|@
 name|Override
@@ -353,7 +430,7 @@ comment|//signals all done
 return|return
 literal|null
 return|;
-comment|//Leaf docs match all query shape
+comment|// Leaf docs match all query shape
 name|SmallDocSet
 name|leafDocs
 init|=
@@ -364,12 +441,68 @@ argument_list|,
 name|acceptContains
 argument_list|)
 decl_stmt|;
-comment|// Get the AND of all child results
+comment|// Get the AND of all child results (into combinedSubResults)
 name|SmallDocSet
 name|combinedSubResults
 init|=
 literal|null
 decl_stmt|;
+comment|//   Optimization: use null subCellsFilter when we know cell is within the query shape.
+name|Shape
+name|subCellsFilter
+init|=
+name|queryShape
+decl_stmt|;
+if|if
+condition|(
+name|cell
+operator|.
+name|getLevel
+argument_list|()
+operator|!=
+literal|0
+operator|&&
+operator|(
+operator|(
+name|cell
+operator|.
+name|getShapeRel
+argument_list|()
+operator|==
+literal|null
+operator|||
+name|cell
+operator|.
+name|getShapeRel
+argument_list|()
+operator|==
+name|SpatialRelation
+operator|.
+name|WITHIN
+operator|)
+operator|)
+condition|)
+block|{
+name|subCellsFilter
+operator|=
+literal|null
+expr_stmt|;
+assert|assert
+name|cell
+operator|.
+name|getShape
+argument_list|()
+operator|.
+name|relate
+argument_list|(
+name|queryShape
+argument_list|)
+operator|==
+name|SpatialRelation
+operator|.
+name|WITHIN
+assert|;
+block|}
 name|Collection
 argument_list|<
 name|Cell
@@ -380,7 +513,7 @@ name|cell
 operator|.
 name|getSubCells
 argument_list|(
-name|queryShape
+name|subCellsFilter
 argument_list|)
 decl_stmt|;
 for|for
@@ -425,6 +558,9 @@ expr_stmt|;
 elseif|else
 if|if
 condition|(
+operator|!
+name|multiOverlappingIndexedShapes
+operator|&&
 name|subCell
 operator|.
 name|getShapeRel
@@ -492,6 +628,7 @@ argument_list|(
 name|combinedSubResults
 argument_list|)
 return|;
+comment|//union is 'or'
 block|}
 return|return
 name|leafDocs
@@ -596,6 +733,14 @@ name|acceptContains
 argument_list|)
 return|;
 block|}
+DECL|field|lastLeaf
+specifier|private
+name|Cell
+name|lastLeaf
+init|=
+literal|null
+decl_stmt|;
+comment|//just for assertion
 DECL|method|getLeafDocs
 specifier|private
 name|SmallDocSet
@@ -625,6 +770,20 @@ argument_list|(
 name|termBytes
 argument_list|)
 assert|;
+assert|assert
+operator|!
+name|leafCell
+operator|.
+name|equals
+argument_list|(
+name|lastLeaf
+argument_list|)
+assert|;
+comment|//don't call for same leaf again
+name|lastLeaf
+operator|=
+name|leafCell
+expr_stmt|;
 name|BytesRef
 name|nextTerm
 init|=
