@@ -766,6 +766,114 @@ name|IsDisjointTo
 argument_list|)
 expr_stmt|;
 block|}
+comment|/** See LUCENE-5062, {@link ContainsPrefixTreeFilter#multiOverlappingIndexedShapes}. */
+annotation|@
+name|Test
+DECL|method|testContainsPairOverlap
+specifier|public
+name|void
+name|testContainsPairOverlap
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|mySetup
+argument_list|(
+literal|3
+argument_list|)
+expr_stmt|;
+name|adoc
+argument_list|(
+literal|"0"
+argument_list|,
+operator|new
+name|ShapePair
+argument_list|(
+name|ctx
+operator|.
+name|makeRectangle
+argument_list|(
+literal|0
+argument_list|,
+literal|33
+argument_list|,
+operator|-
+literal|128
+argument_list|,
+literal|128
+argument_list|)
+argument_list|,
+name|ctx
+operator|.
+name|makeRectangle
+argument_list|(
+literal|33
+argument_list|,
+literal|128
+argument_list|,
+operator|-
+literal|128
+argument_list|,
+literal|128
+argument_list|)
+argument_list|,
+literal|true
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|commit
+argument_list|()
+expr_stmt|;
+name|Query
+name|query
+init|=
+name|strategy
+operator|.
+name|makeQuery
+argument_list|(
+operator|new
+name|SpatialArgs
+argument_list|(
+name|SpatialOperation
+operator|.
+name|Contains
+argument_list|,
+name|ctx
+operator|.
+name|makeRectangle
+argument_list|(
+literal|0
+argument_list|,
+literal|128
+argument_list|,
+operator|-
+literal|16
+argument_list|,
+literal|128
+argument_list|)
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|SearchResults
+name|searchResults
+init|=
+name|executeQuery
+argument_list|(
+name|query
+argument_list|,
+literal|1
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|searchResults
+operator|.
+name|numFound
+argument_list|)
+expr_stmt|;
+block|}
 annotation|@
 name|Test
 DECL|method|testWithinDisjointParts
@@ -1304,7 +1412,7 @@ operator|==
 literal|0
 condition|)
 block|{
-comment|//1 in 10
+comment|//1 in 12
 name|indexedShape
 operator|=
 literal|null
@@ -1320,12 +1428,12 @@ if|if
 condition|(
 name|R
 operator|%
-literal|4
+literal|3
 operator|==
 literal|0
 condition|)
 block|{
-comment|//3 in 12
+comment|//4-1 in 12
 comment|//comprised of more than one shape
 name|Rectangle
 name|shape1
